--- a/AutoMall/ViewControllers/Mall/ConfirmOrderVC.xib
+++ b/AutoMall/ViewControllers/Mall/ConfirmOrderVC.xib
@@ -140,25 +140,25 @@
                             <exclude reference="lrv-Hk-W3U"/>
                         </mask>
                         <mask key="constraints">
-                            <exclude reference="ZX7-OC-neZ"/>
-                            <exclude reference="aYL-ea-Pd0"/>
-                            <exclude reference="NyW-5Y-Bap"/>
-                            <exclude reference="mJl-WM-YdL"/>
-                            <exclude reference="tBw-Rf-K7p"/>
-                            <exclude reference="6Q7-7p-oZi"/>
-                            <exclude reference="99a-hx-6Wd"/>
-                            <exclude reference="HTC-Dq-RtU"/>
-                            <exclude reference="wxk-i1-HLJ"/>
                             <exclude reference="B55-BR-mGO"/>
                             <exclude reference="Fy8-0m-c2e"/>
-                            <exclude reference="Ko3-Ij-hjU"/>
-                            <exclude reference="U7t-mf-9MJ"/>
-                            <exclude reference="zMa-ve-0ai"/>
                             <exclude reference="IFS-0k-97M"/>
                             <exclude reference="i75-8U-5z6"/>
                             <exclude reference="kLz-tn-Tyl"/>
                             <exclude reference="n7p-Oj-7pH"/>
                             <exclude reference="oB1-po-YSA"/>
+                            <exclude reference="NyW-5Y-Bap"/>
+                            <exclude reference="mJl-WM-YdL"/>
+                            <exclude reference="tBw-Rf-K7p"/>
+                            <exclude reference="Ko3-Ij-hjU"/>
+                            <exclude reference="U7t-mf-9MJ"/>
+                            <exclude reference="zMa-ve-0ai"/>
+                            <exclude reference="6Q7-7p-oZi"/>
+                            <exclude reference="99a-hx-6Wd"/>
+                            <exclude reference="HTC-Dq-RtU"/>
+                            <exclude reference="wxk-i1-HLJ"/>
+                            <exclude reference="ZX7-OC-neZ"/>
+                            <exclude reference="aYL-ea-Pd0"/>
                         </mask>
                     </variation>
                     <variation key="widthClass=compact">
@@ -171,25 +171,25 @@
                             <include reference="lrv-Hk-W3U"/>
                         </mask>
                         <mask key="constraints">
-                            <include reference="ZX7-OC-neZ"/>
-                            <include reference="aYL-ea-Pd0"/>
-                            <include reference="NyW-5Y-Bap"/>
-                            <include reference="mJl-WM-YdL"/>
-                            <include reference="tBw-Rf-K7p"/>
-                            <include reference="6Q7-7p-oZi"/>
-                            <include reference="99a-hx-6Wd"/>
-                            <include reference="HTC-Dq-RtU"/>
-                            <include reference="wxk-i1-HLJ"/>
                             <include reference="B55-BR-mGO"/>
                             <include reference="Fy8-0m-c2e"/>
-                            <include reference="Ko3-Ij-hjU"/>
-                            <include reference="U7t-mf-9MJ"/>
-                            <include reference="zMa-ve-0ai"/>
                             <include reference="IFS-0k-97M"/>
                             <include reference="i75-8U-5z6"/>
                             <include reference="kLz-tn-Tyl"/>
                             <include reference="n7p-Oj-7pH"/>
                             <include reference="oB1-po-YSA"/>
+                            <include reference="NyW-5Y-Bap"/>
+                            <include reference="mJl-WM-YdL"/>
+                            <include reference="tBw-Rf-K7p"/>
+                            <include reference="Ko3-Ij-hjU"/>
+                            <include reference="U7t-mf-9MJ"/>
+                            <include reference="zMa-ve-0ai"/>
+                            <include reference="6Q7-7p-oZi"/>
+                            <include reference="99a-hx-6Wd"/>
+                            <include reference="HTC-Dq-RtU"/>
+                            <include reference="wxk-i1-HLJ"/>
+                            <include reference="ZX7-OC-neZ"/>
+                            <include reference="aYL-ea-Pd0"/>
                         </mask>
                     </variation>
                 </view>
@@ -326,7 +326,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+            <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="gKy-pa-SNM" firstAttribute="top" secondItem="CVs-bq-r7J" secondAttribute="bottom" constant="16" id="1rT-yw-ipf"/>
                 <constraint firstItem="CVs-bq-r7J" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="3Yk-fF-pjH"/>
@@ -367,22 +367,22 @@
                 <mask key="constraints">
                     <exclude reference="9Ng-lD-n6A"/>
                     <exclude reference="mbY-0L-Kbf"/>
-                    <exclude reference="kts-bq-z2p"/>
-                    <exclude reference="wbK-bh-Lbw"/>
-                    <exclude reference="1rT-yw-ipf"/>
-                    <exclude reference="5IA-mB-kP6"/>
-                    <exclude reference="3Yk-fF-pjH"/>
-                    <exclude reference="R4h-If-W1c"/>
-                    <exclude reference="V9J-x6-iSj"/>
-                    <exclude reference="aUl-jD-oER"/>
-                    <exclude reference="9FD-l9-skk"/>
-                    <exclude reference="U0V-XO-aCH"/>
-                    <exclude reference="kv3-qL-CBt"/>
-                    <exclude reference="s72-8H-qI3"/>
                     <exclude reference="3j3-uk-G9k"/>
                     <exclude reference="O46-ei-JPi"/>
                     <exclude reference="OiB-gz-eFh"/>
                     <exclude reference="T8K-w8-XN1"/>
+                    <exclude reference="kts-bq-z2p"/>
+                    <exclude reference="wbK-bh-Lbw"/>
+                    <exclude reference="3Yk-fF-pjH"/>
+                    <exclude reference="R4h-If-W1c"/>
+                    <exclude reference="V9J-x6-iSj"/>
+                    <exclude reference="aUl-jD-oER"/>
+                    <exclude reference="1rT-yw-ipf"/>
+                    <exclude reference="5IA-mB-kP6"/>
+                    <exclude reference="9FD-l9-skk"/>
+                    <exclude reference="U0V-XO-aCH"/>
+                    <exclude reference="kv3-qL-CBt"/>
+                    <exclude reference="s72-8H-qI3"/>
                     <exclude reference="AT6-Vn-gtb"/>
                     <exclude reference="Epb-lR-GtG"/>
                     <exclude reference="Wd5-BS-U0E"/>
@@ -401,22 +401,22 @@
                 <mask key="constraints">
                     <include reference="9Ng-lD-n6A"/>
                     <include reference="mbY-0L-Kbf"/>
-                    <include reference="kts-bq-z2p"/>
-                    <include reference="wbK-bh-Lbw"/>
-                    <include reference="1rT-yw-ipf"/>
-                    <include reference="5IA-mB-kP6"/>
-                    <include reference="3Yk-fF-pjH"/>
-                    <include reference="R4h-If-W1c"/>
-                    <include reference="V9J-x6-iSj"/>
-                    <include reference="aUl-jD-oER"/>
-                    <include reference="9FD-l9-skk"/>
-                    <include reference="U0V-XO-aCH"/>
-                    <include reference="kv3-qL-CBt"/>
-                    <include reference="s72-8H-qI3"/>
                     <include reference="3j3-uk-G9k"/>
                     <include reference="O46-ei-JPi"/>
                     <include reference="OiB-gz-eFh"/>
                     <include reference="T8K-w8-XN1"/>
+                    <include reference="kts-bq-z2p"/>
+                    <include reference="wbK-bh-Lbw"/>
+                    <include reference="3Yk-fF-pjH"/>
+                    <include reference="R4h-If-W1c"/>
+                    <include reference="V9J-x6-iSj"/>
+                    <include reference="aUl-jD-oER"/>
+                    <include reference="1rT-yw-ipf"/>
+                    <include reference="5IA-mB-kP6"/>
+                    <include reference="9FD-l9-skk"/>
+                    <include reference="U0V-XO-aCH"/>
+                    <include reference="kv3-qL-CBt"/>
+                    <include reference="s72-8H-qI3"/>
                     <include reference="AT6-Vn-gtb"/>
                     <include reference="Epb-lR-GtG"/>
                     <include reference="Wd5-BS-U0E"/>
