--- a/AutoMall/ViewControllers/Login_Register/RegisterYZMViewController.xib
+++ b/AutoMall/ViewControllers/Login_Register/RegisterYZMViewController.xib
@@ -11,7 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterYZMViewController">
             <connections>
+                <outlet property="checkBtn" destination="Ak3-WM-Taa" id="NcJ-zH-CZu"/>
+                <outlet property="codeNumTF" destination="AgR-Vu-cQb" id="Kzu-mS-SEs"/>
                 <outlet property="phoneL" destination="Wag-H5-BaI" id="z4T-oq-2fd"/>
+                <outlet property="reSendBtn" destination="Dyd-XI-Uv9" id="J3G-2i-4Zv"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -78,6 +81,9 @@
                             <include reference="38O-Ql-bka"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <action selector="reSendAction:" destination="-1" eventType="touchUpInside" id="Hdd-kp-sQp"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2l3-d4-gSD">
                     <rect key="frame" x="0.0" y="110" width="375" height="44"/>
@@ -159,6 +165,9 @@
                             <include reference="d8c-Uo-Cul"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <action selector="nextAction:" destination="-1" eventType="touchUpInside" id="9nh-GY-Vht"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -176,7 +185,7 @@
                 <constraint firstItem="Ak3-WM-Taa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="jSR-q2-twK"/>
                 <constraint firstAttribute="trailing" secondItem="2l3-d4-gSD" secondAttribute="trailing" id="zjT-oY-Sdg"/>
             </constraints>
-            <point key="canvasLocation" x="-395" y="64"/>
+            <point key="canvasLocation" x="-698" y="102"/>
         </view>
     </objects>
 </document>
